[tool.poetry]
name = "langkit"
version = "0.0.17"
description = "A collection of text metric udfs for whylogs profiling and monitoring in WhyLabs"
authors = ["WhyLabs.ai <langkit@whylabs.ai>"]
license = "Apache-2.0"
readme = "DESCRIPTION.md"


[tool.poetry.dependencies]
python = "^3.8"
textstat = "^0.7.3"
pandas = "*"
whylogs = "1.2.6"


# optional dependencies
torch = {version = "*", optional = true}
datasets = {version ="^2.12.0", optional = true}
openai = {version ="^0.27.6", optional = true}
nltk = {version ="^3.8.1", optional = true}
sentence-transformers = {version ="^2.2.2", optional = true}
evaluate = {version = "^0.4.0", optional = true}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.0"
pytest = "^7.3.1"
mypy = "^1.4.1"
pre-commit = "^2.8"
black = "^23.7.0"
flake8 = { version = "^6.0.0", python = ">=3.8.1,<4.0" }
types-setuptools = "^68.0.0.2"
bump2version = "^1.0.1"


[tool.poetry.extras]
all = [
    "torch",
    "datasets",
    "openai",
    "nltk",
    "sentence-transformers",
    "evaluate",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
